testsuites/LLT/compiler/Diagnose/parse_test/parse_unclosed_delimiter/parse_annotation/delimiter_part4.expect.out
error: expected '#' or '"' in raw string, found ' '
  ==> delimiter_part4.cj:33:5:
   | 
33 |    # note: only declarations or macro expressions can be used in the top-level
   |    ~^ expected '#' or '"'
   |    |
   |    because it is raw string prefix
   | 

1 error generated, 1 error printed.
